# agnostic-mdns

./: CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: ci.yml  loc.yml
agnostic-mdns/: Cargo.toml  README.md
agnostic-mdns/examples/: async_std.rs  smol.rs  tokio.rs
agnostic-mdns/src/: client.rs  lib.rs  server.rs  service.rs  sync.rs  tests.rs  types.rs  utils.rs  worksteal.rs  zone.rs
agnostic-mdns/src/service/: ptr.rs  srv.rs  txt.rs
agnostic-mdns/src/sync/: server.rs
agnostic-mdns/src/types/: message.rs  name.rs  query.rs  record.rs  record_data.rs
agnostic-mdns/src/types/record_data/: ptr.rs  srv.rs  txt.rs
agnostic-mdns/src/worksteal/: client.rs  server.rs  tests.rs
agnostic-mdns/src/worksteal/tests/: server.rs  zone.rs
examples/: async_std.rs  smol.rs  tokio.rs
mdns-proto/: Cargo.toml  README.md
mdns-proto/src/: client.rs  error.rs  lib.rs  server.rs  srv.rs  txt.rs
src/: client.rs  endpoint.rs  lib.rs  server.rs  tests.rs  types.rs  utils.rs  zone.rs
src/tests/: server.rs  zone.rs
src/types/: answer.rs  message.rs  name.rs  query.rs  question.rs  record.rs  record_data.rs  record_type.rs  srv.rs
src/types/record_data/: ptr.rs  srv.rs  txt.rs
