[package]
name = "agnostic-mdns"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/agnostic-mdns"
homepage = "https://github.com/al8n/agnostic-mdns"
documentation = "https://docs.rs/agnostic-mdns"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT OR Apache-2.0"
rust-version = "1.73"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
agnostic = { version = "0.4", features = ["dns", "net"] }
atomic_refcell = "0.1"
async-channel = "2"
either = "1"
futures-util = "0.3"
smol_str = "0.3"
smallvec-wrapper = "0.2"
socket2 = "0.5"
triomphe = "0.1"
thiserror = "2"
hickory-proto = { version = "0.24", features = ["mdns"] }

tracing = "0.1"


[dev-dependencies]
paste = "1"
agnostic = { version = "0.4", features = ["dns", "net", "tokio", "async-std", "smol"] }
tokio = { version = "1", features = ["full"] }
smol = "2"
async-std = "1"
scopeguard = "1"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

