[package]
name = "agnostic-mdns"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/agnostic-mdns"
homepage = "https://github.com/al8n/agnostic-mdns"
documentation = "https://docs.rs/agnostic-mdns"
description = "Async runtime agnostic, simple mDNS client/server library in Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[[example]]
name = "tokio"
path = "examples/tokio.rs"
required-features = ["tokio"]

[features]
default = ["std"]
alloc = []
std = []

tokio = ["agnostic/tokio"]
async-std = ["agnostic/async-std"]
smol = ["agnostic/smol"]

[dependencies]
agnostic = { version = "0.4", features = ["dns", "net"] }
atomic_refcell = "0.1"
async-channel = "2"
bitflags = "2"
either = "1"
futures = "0.3"
smol_str = "0.3"
smallvec-wrapper = "0.2"
socket2 = "0.5"
triomphe = "0.1"
thiserror = "2"

tracing = "0.1"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["system"] }

[target.'cfg(windows)'.dependencies]
hostname = "0.4"

[dev-dependencies]
paste = "1"
agnostic = { version = "0.4", features = ["dns", "net", "tokio", "async-std", "smol"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
tokio = { version = "1", features = ["full"] }
smol = "2"
async-std = "1"
scopeguard = "1"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

