[package]
name = "agnostic-mdns"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/al8n/agnostic-mdns"
homepage = "https://github.com/al8n/agnostic-mdns"
documentation = "https://docs.rs/agnostic-mdns"
description = "Sans-I/O style simple and lightweight mDNS client/server library for any async runtime."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
categories = ["network-programming"]
keywords = ["mdns", "dns-sd", "zeroconf", "sansio"]

[[example]]
name = "tokio"
path = "examples/tokio.rs"
required-features = ["tokio"]

[[example]]
name = "async-std"
path = "examples/async_std.rs"
required-features = ["async-std"]

[[example]]
name = "smol"
path = "examples/smol.rs"
required-features = ["smol"]

[features]
default = ["std"]
std = []

tokio = ["agnostic-net/tokio", "std"]
async-std = ["agnostic-net/async-std", "std"]
smol = ["agnostic-net/smol", "std"]

[dependencies]
agnostic-net = { version = "0.2" }
atomic_refcell = "0.1"
async-channel = "2"
dns-protocol = { version = "0.1", package = "dns-protocol-patch" }
either = "1"
futures = "0.3"
iprobe = "0.1"
pin-project-lite = "0.2"
smol_str = "0.3"
smallvec-wrapper = "0.2"
socket2 = { version = "0.5", features = ["all"] }
triomphe = "0.1"
thiserror = "2"

tracing = "0.1"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["system", "net"] }

[target.'cfg(windows)'.dependencies]
hostname = "0.4"

[dev-dependencies]
paste = "1"
agnostic-net = { version = "0.2", features = ["tokio", "async-std", "smol"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
tokio = { version = "1", features = ["full"] }
smol = "2"
async-std = "1"
scopeguard = "1"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"

