[package]
name = "mdns-proto"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https//github.com/al8n/agnostic-mdns"
homepage = "https//github.com/al8n/agnostic-mdns"
documentation = "https//docs.rs/agnostic-mdns"
description = "Sans-I/O mDNS protocol implementation"
readme = "README.md"
rust-version = "1.85.0"


[features]
default = ["std"]
std = ["slab?/default", "dns-protocol/default", "thiserror/default", "simdutf8/default"]
alloc = []

[dependencies]
auto_enums = { version = "0.8", default-features = false }
derive_more = { version = "2", features = ["is_variant", "display", "from_str"] }
dns-protocol = { version = "0.1", package = "dns-protocol-patch", default-features = false }
either = { version = "1", default-features = false }
simdutf8 = { version = "0.1", default-features = false }
thiserror = { version = "2", default-features = false }

slab = { version = "0.4", optional = true, default-features = false }
tracing = { version = "0.1", optional = true }
